# QuantumSearch

./: .gitignore  CTQW multi boson arbitrary graph no interaction qutip.py  CTQW multi fermion arbitrary graph no interaction qutip.py  README.md  pyproject.toml
Other/: db_script_test.sh  delftblue_test.py  exact_fermionic_scaling.py  graph_characteristics.py  old_plotting_function.py  random_vs_quantum_walk.py
hpc/: run_simulation_slurm.sh  run_simulation_slurm_1.sh  run_simulation_slurm_2.sh  run_simulation_slurm_3.sh  run_simulation_slurm_4.sh
scripts/: analyze_fermionic_runtimes.py  analyze_scaling.py  analyze_scaling_old.py  example_collapse_state.py  load_and_analyze_results.py  plot_success_probabilities.py  run_batch.py  run_parallel.py  run_parallel_fermionic_scaling.py  run_parallel_simulations.py  run_parallel_simulations_1.py  run_parallel_simulations_2.py  run_parallel_simulations_3.py  run_running_times.py  run_serial.py  test_estimate_success_probabilities.py  test_running_time_bounds.py
src/: bosonic_search.py  fermionic_search.py  graph.py  main.py  majority_vote_operator.py  plotting.py  simulation.py  utils.py
src/quantumsearch/: main.py  plotting.py
src/quantumsearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quantumsearch/core/: bosonic_search.py  fermionic_search.py  graph.py  majority_vote_operator.py  simulation.py  utils.py
src/quantumsearch/parallel/: __init__.py  mpi_runner.py  utils.py
